--- a/Review Response Letter main.tex
+++ b/Review Response Letter main.tex
@@ -1,40 +1,61 @@
 \documentclass{article}
 \usepackage{hyperref}
+\usepackage{doi}
+\usepackage{chngcntr} %计数器宏包
+
+\counterwithin{subsection}{section} % 每个 section 开始时重置 subsection 计数器
+\renewcommand{\thesubsection}{\thesection.\arabic{subsection}} % 定义编号格式
+
+
+
 \usepackage{pifont}
-	\def\papertitle{Papers requiring a response.}
-	\def\journal{\href{https://cje.ejournal.org.cn/}{\textsl{Chinese Journal of Electronics}}}
-	\def\authors{Zhao Xiaofei on behalf of all co-authors. or Speaking as the corresponding author and representing all co-authors.}
+	\def\papertitle{Adaptive Resource Management in Dynamic Cyber-Physical Systems using AI}
+	\def\journal{\href{}{\textsl{Journal Name}}}
+	\def\authors{Zhao Xiaofei on behalf of all co-authors%. or Speaking 
+	as the corresponding author and representing all co-authors.}
 	\def\doi{12345}
 \input{AR_to_RC.tex}
 
+%\tableofcontents 
+
 \section{Reviewer \#1}
 
-\subsection{Page 3 Line 15}
+\subsection*{}
 
-\RC Why ... ?.
+\RC{The paper presents ... , including:}
 
 \AR I do not agree.
 
 \par\noindent\hfill\ding{100}\hfill\mbox{} %  示例符号，可以替换为其他 ding 符号
 
-\subsection{Major concern \#3}
+\subsection{Section 4.3}
+\RC{In Section 4.3 of this paper, ...}
 
-\RC What ... ?
+\AR I do not agree.
 
-\AR Ok, I changed this:
+\par\noindent\hfill\ding{100}\hfill\mbox{} %  示例符号，可以替换为其他 ding 符号
 
-\begin{quote}
-The cat in the box is \DIFdelbegin \DIFdel{dead}\DIFdelend \DIFaddbegin \DIFadd{alive}\DIFaddend .
-\begin{align}
-E &= mc^2 \\
-m\cdot \DIFdelbegin \DIFdel{a=F}\DIFdelend \DIFaddbegin \DIFadd{v=p}\DIFaddend .
-\end{align}
-\end{quote}
+%%%%%%%%
 
-\AR*But I actually have no idea what you were talking about.
 
-\hrule
+%\subsection{Major concern \#3}
 
-\section{Reviewer \#2}
+%\RC What ... ?
+
+%\AR Ok, I changed this:
+
+%\begin{quote}
+%The cat in the box is \DIFdelbegin \DIFdel{dead}\DIFdelend \DIFaddbegin \DIFadd{alive}\DIFaddend .
+%\begin{align}
+%E &= mc^2 \\
+%m\cdot \DIFdelbegin \DIFdel{a=F}\DIFdelend \DIFaddbegin \DIFadd{v=p}\DIFaddend .
+%\end{align}
+%\end{quote}
+
+%\AR*But I actually have no idea what you were talking about.
+
+%\hrule
+
+%\section{Reviewer \#2}
 
 \end{document}
